# wfbng-dynamic-link

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  shell.nix
conf/: drone.conf.sample  gs.yaml.sample
conf/radios/: m8812eu2.yaml
docker/: Dockerfile.dev  entrypoint.sh  run-dev.sh
docs/: debugging.md  dynamic-link-design.md  encoder_api.md  knob-cadence-bench.md  mlink-airtime-bench.md  phase0-implementation.md  phase3-implementation.md
docs/ideas/: lessons-from-alink-gs.md  per-flight-jsonl-rotation.md
drone/: Makefile
drone/src/: dl_applier.c  dl_apply.h  dl_backend_enc.c  dl_backend_enc.h  dl_backend_radio.c  dl_backend_radio.h  dl_backend_tx.c  dl_backend_tx.h  dl_ceiling.c  dl_ceiling.h  dl_config.c  dl_config.h  dl_dbg.c  dl_dbg.h  dl_dedup.c  dl_dedup.h  dl_hello.c  dl_hello.h  dl_idr_listen.c  (+18 more)
packaging/: dynamic-link-applier.init  dynamic-link-applier.service  dynamic-link-gs.service
tests/: test_bitrate.py  test_debug_config.py  test_dl_events_diff.py  test_dl_replay.py  test_dl_report.py  test_dl_review.py  test_drone_cli_overrides.py  test_drone_config.py  test_drone_e2e.py  test_dynamic_fec.py  test_flight_log.py  test_idr_burst.py  test_latency_sink.py  test_mavlink_status.py  test_observed.py  test_oscillation.py  test_phase2_e2e.py  test_phase3_e2e.py  test_policy_bitrate.py  test_policy_dynamic_fec_e2e.py  test_policy_leading.py  test_policy_trailing.py  test_predictor.py  test_profile.py  test_service_config.py  test_signals.py  test_stats_client.py  test_timesync.py  test_tunnel_listener.py  test_video_tap.py  test_wire_contract.py
(+88 files in other folders)
